Move cluster-operator certificate methods to CertUtils
Signed-off-by: Katherine Stanley <11195226+katheris@users.noreply.github.com>